salvando quantidade de votos por hora no backend

--- a/web/src/app/survey-create/survey-create.html
+++ b/web/src/app/survey-create/survey-create.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="input-field">
-        <label for="option-one">Opção 3:</label>
+        <label for="option-one">Opção 3</label>
         <input name="option-three" [(ngModel)]="option3" maxlength="22">
     </div>
 
