--- a/web/src/app/survey-finished/survey-finished.html
+++ b/web/src/app/survey-finished/survey-finished.html
@@ -1,3 +1,5 @@
-<h3>TODO: Gráfico</h3>
+<h3 *ngIf="!running && survey">TODO: Gráfico</h3>
 
-<h3>Crie uma nova Enquete clicando <a routerLink="/create">aqui</a>!</h3>
+<h3 *ngIf="!running">Crie uma nova Enquete clicando <a routerLink="/create">aqui</a>!</h3>
+
+<h3 *ngIf="survey && running">A Enquete {{survey.name}} ainda está rolando! Clique <a routerLink="/live">aqui</a> para acompanhar em tempo real!</h3>
